tests/errors/interface_multiple_missing_fields.dang
# Test multiple missing interface fields

interface Contact {
  pub email: String!
  pub phone: String!
  pub name: String!
}

type Person implements Contact {
  pub name: String!
  # Missing: email and phone
}
